--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,3 @@
 <resources>
-    <style name="Theme.EquiRide" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryDark">@color/purple_700</item>
-        <item name="colorAccent">@color/teal_200</item>
-    </style>
+    <style name="Theme.EquiRide" parent="Theme.MaterialComponents.Light.NoActionBar" />
 </resources>
